plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.1'
    id 'io.spring.dependency-management' version '1.1.0'
}

group = 'cc.sirrus'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(21))
    }
}
compileJava {
    options.compilerArgs.add('--enable-preview')
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    maven { url 'https://projectlombok.org/edge-releases' }
    mavenLocal()
}

dependencies {
    implementation 'cn.hutool:hutool-all:5.8.20'
    // https://mvnrepository.com/artifact/org.smartboot.http/smart-http-server

    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-freemarker'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // ! DB
    runtimeOnly 'com.h2database:h2'
    runtimeOnly 'com.ibm.db2:jcc'
    runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc'
    runtimeOnly 'com.mysql:mysql-connector-j'
    runtimeOnly 'com.oracle.database.jdbc:ojdbc8'
    runtimeOnly 'org.apache.derby:derby'
    runtimeOnly 'org.hsqldb:hsqldb'
    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
    runtimeOnly 'org.postgresql:postgresql'


    compileOnly 'org.projectlombok:lombok:edge-SNAPSHOT'
    annotationProcessor 'org.projectlombok:lombok:edge-SNAPSHOT'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    implementation 'ch.qos.logback:logback-core:1.4.7'
    implementation 'ch.qos.logback:logback-classic:1.4.7'
    implementation 'ch.qos.logback:logback-access:1.4.7'
}

tasks.named('test') {
    useJUnitPlatform()
}
